@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkGrid.c,v 1.25.2.2 2005/01/11 10:46:39 dkf Exp $
+ * RCS: @(#) $Id: tkGrid.c,v 1.25.2.3 2005/08/11 12:17:09 dkf Exp $
  */
 
 #include "tkInt.h"
@@ -2540,7 +2540,7 @@ ConfigureSlaves(interp, tkwin, objc, objv)
     firstChar = 0;
     for (numWindows = i = 0; i < objc; i++) {
 	prevChar = firstChar;
-	string = Tcl_GetStringFromObj(objv[i], (int *) &length);
+	string = Tcl_GetStringFromObj(objv[i], &length);
     	firstChar = string[0];
 	
 	if (firstChar == '.') {
